Fix: Restore headless mode and remove async naming confusion
Fixes:
- Headless=True by default (local and VPS) - browser won't open
- Renamed import_complete_async to import_complete (it's sync)
- Removed async naming to avoid Django async context errors

Config:
- Local: headless, simple, no stealth, no anti-detection
- VPS: headless, stealth (if USE_STEALTH=true), full anti-detection

Changes:
- predictions/sofascore_api.py: headless=True always
- import_sofascore_complete.py: renamed method
- .env.example: documentation for IS_VPS and USE_STEALTH

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,37 @@
-# Django Settings
-SECRET_KEY=your_django_secret_key_here_generate_a_strong_one
-DEBUG=False
-ALLOWED_HOSTS=yourdomain.com,www.yourdomain.com
+# Django Configuration
+SECRET_KEY=your-secret-key-here
+DEBUG=True
 
-# API Keys - Replace with your own keys
-API_KEY_FOOTBALL_DATA=your_football_data_api_key_here
-API_KEY_ODDS=your_odds_api_key_here
-API_KEY_FOOTBALL=your_football_api_key_here
+# Database
+DATABASE_URL=sqlite:///db.sqlite3
 
-# Database (PostgreSQL - Dokploy)
-# For production, use the DATABASE_URL from Dokploy
-DATABASE_URL=postgresql://futbol-db:futbol.db@futbol-db-uhnlos:5432/futbol-db
+# API Keys
+API_KEY_ODDS=your-odds-api-key-here
 
-# Leave commented out to use SQLite for local development
-# DATABASE_URL=sqlite:///db.sqlite3
+# SofaScore Scraping Configuration
+# IS_VPS: Activa modo VPS con anti-detección completa
+# - false (default): Modo local simple, sin stealth, navegador visible
+# - true: Modo VPS con stealth, headless, delays largos
+IS_VPS=false
+
+# USE_STEALTH: Activa playwright-stealth (solo funciona si IS_VPS=true)
+# - false (default): Sin playwright-stealth
+# - true: Activa playwright-stealth para ocultar automatización
+USE_STEALTH=false
+
+# Configuración de ejemplo para diferentes entornos:
+
+# DESARROLLO LOCAL (por defecto):
+# IS_VPS=false
+# USE_STEALTH=false
+# Resultado: Navegador visible, sin delays largos, sin anti-detección
+
+# VPS SIN STEALTH:
+# IS_VPS=true
+# USE_STEALTH=false
+# Resultado: Headless, delays largos, scripts anti-detección básicos
+
+# VPS CON STEALTH (recomendado para VPS):
+# IS_VPS=true
+# USE_STEALTH=true
+# Resultado: Headless, delays largos, playwright-stealth, anti-detección completa
