--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     build: .
     command: gunicorn football_django.wsgi:application --bind 0.0.0.0:8000 --workers 4 --timeout 120
     volumes:
-      - .:/app
       - static_volume:/app/staticfiles
+      - media_volume:/app/media
     ports:
       - "8000:8000"
     environment:
@@ -35,3 +35,4 @@ services:
 volumes:
   postgres_data:
   static_volume:
+  media_volume:
